# oil-agent

./: .gitignore  GEMINI.md  README.md  config.json  context_management.py  dspy_oil_module.py  dspy_oil_module_v2.py  llama_utils.py  oil-agent.py  oil_agent.py  optimize_agent.py  pyproject.toml  skill.md  skills-lock.json  test_llama_server.py  test_optimization.py
data/: oil_intelligence_dataset.jsonl
docs/: CODE_REVIEW_REPORT.md  DOCUMENTATION_COMPLETE.md  OPTIMIZATION.md  dspy_documentation.md
llama_cpp_wrapper/: README.md  __init__.py  config.py  core.py  exceptions.py  models.py  utils.py
llama_cpp_wrapper/examples/: advanced_usage.py  basic_usage.py  integration_example.py
logs/: email_history.json  events_seen.json
plans/: ameliorations-informations-recentes.md  analyse-deduplication.md  analyse-dspy-implementation.md  analyse-resultats-script-20260313.md  apprentissage-dspy.md  correction-parsing-json-v2.md  correction-parsing-json.md  diagnostic-outils-non-utilises.md  diagnostic-problemes-dspy.md  integration-chrome-devtools-mcp.md  migration-ollama-llamacpp.md  modifications-code-existant.md  module-llamacpp-autonome.md  optimisation-contextuelle-smolagents.md  optimisation-prompt-dspy.md  optimisation-taille-intelligence-dspy.md  rapport-ameliorations-dspy-deduplication.md  recommandations-immediates.md  test_corrections.py  test_dspy_v2.py  timeout-dspy-configuration.md
